--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
                 </div>
             </div>
         </a>
+    
+        <a href="/listing-34432.html" class="w-inline-block">
+            <div data-w-id="24abb0d3-2135-600a-53be-95eaf847645b" style="-webkit-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="listingmain">
+                <h1 class="listingcity">NEW DELHI</h1>
+                <h1 class="listingpropertytype">House</h1>
+                <img src="listings/34432/thumbnail.jpg" loading="lazy" alt="" class="listingimg" />
+                <div class="listingbottomblock">
+                    <div class="div-block-74">
+                        <div class="listingpropertyaddress">A-2/270</div>
+                        <div class="listingpropertyprice">$3,434</div>
+                    </div>
+                    <div class="div-block-75">
+                        <img src="/images/bed.png" loading="lazy" alt="" class="image-48" />
+                        <h1 class="listingpropertybeds">23</h1>
+                        <img src="/images/bath.png" loading="lazy" alt="" class="image-49" />
+                        <h1 class="listingpropertybaths">23</h1>
+                        <img src="/images/garage.png" loading="lazy" alt="" class="image-50" />
+                        <h1 class="listingpropertygarages">23</h1>
+                    </div>
+                </div>
+            </div>
+        </a>
 <div class="flviewmoreblock">
               <a href="/listings.html" class="link-block w-inline-block">
                   <h1 data-w-id="da39661c-dcb7-b54a-9d23-5311433f7276" style="-webkit-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="viewmore">> VIEW MORE</h1>
