--- a/buying.html
+++ b/buying.html
@@ -117,5 +117,6 @@
     <script src="/js/webflow.schunk.9619e854913b3e55.js" type="text/javascript"></script>
     <script src="/js/webflow.schunk.d76ee91ec9539584.js" type="text/javascript"></script>
     <script src="/js/webflow-script-1.js" type="text/javascript"></script>
+    <script src="/js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
