--- a/properties.html
+++ b/properties.html
@@ -82,5 +82,6 @@
     <script src="/js/webflow.schunk.6c94673727302d98.js" type="text/javascript"></script>
     <script src="/js/webflow.schunk.9619e854913b3e55.js" type="text/javascript"></script>
     <script src="/js/webflow-script-2.js" type="text/javascript"></script>
+    <script src="/js/scripts.js" type="text/javascript"></script>    
   </body>
 </html>
