updated nav bars

--- a/properties.html
+++ b/properties.html
@@ -40,6 +40,43 @@
   </head>
   <body>
     <div data-w-id="d42c31c2-da05-3ef4-e0f4-7446c4a30602" class="top"></div>
+
+    <div data-w-id="5879fae7-503f-dad0-e67c-d505ad12dd98" class="nav-bar">
+      <div class="nav-bar-bg"></div>
+      <div class="nav-bar-logo">
+          <a href="/" aria-current="page" class="w-inline-block w--current">
+              <img data-w-id="6177f495-4325-88f7-aa64-aad7bdc146a1" loading="lazy" alt="MKS Logo" src="/images/logo4.png" class="image-54" />
+          </a>
+      </div>
+      <div class="nav-bar-links">
+          <h1 data-w-id="6177f495-4325-88f7-aa64-aad7bdc146a3" class="nav-bar-link-about"><a href="about.html" class="link-5">ABOUT</a></h1>
+          <h1 data-w-id="6177f495-4325-88f7-aa64-aad7bdc146a6" class="nav-bar-link-fhv"><a href="homeevaluation.html" class="link-6">free home evaluation</a></h1>
+          <h1 data-w-id="6177f495-4325-88f7-aa64-aad7bdc146a9" class="nav-bar-link-buy"><a href="buying.html" class="link-7">BUYING A HOME</a></h1>
+          <h1 data-w-id="6177f495-4325-88f7-aa64-aad7bdc146ac" class="nav-bar-link-properties"><a href="properties.html" class="link-10">PROPERTIES</a></h1>
+          <h1 data-w-id="6177f495-4325-88f7-aa64-aad7bdc146af" class="nav-bar-link-contact"><a href="contact-us.html" class="link-11">CONTACT</a></h1>
+      </div>
+      <h1 class="nav-bar-menu-sign">+</h1>
+  </div>
+  <div class="sidemenu-wrapper">
+      <div class="sidepanelmenu">
+          <div class="sidepanelmenuinner">
+              <a href="#" class="link-block-5 w-inline-block"><img loading="lazy" src="/images/logo4.png" alt="" class="image-53" /></a>
+              <h1 class="heading-55"><a href="about.html" class="link-12">ABOUT</a></h1>
+              <h1 class="heading-56"><a href="homeevaluation.html" class="link-13">FREE HOME EVALUATION</a></h1>
+              <h1 class="heading-57"><a href="buying.html" class="link-14">BUYING A HOME</a></h1>
+              <h1 class="heading-58"><a href="properties.html" class="link-15">PROPERTIES</a></h1>
+              <h1 class="heading-59"><a href="listings.html" class="link-16">ALL LISTINGS</a></h1>
+              <h1 class="heading-60"><a href="#" class="link-17">FOR LEASE</a></h1>
+              <h1 class="heading-61"><a href="#" class="link-18">PRE-CONSTRUCTION</a></h1>
+              <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
+              <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">📍 53 Lockcentipede Road</strong></div>
+          </div>
+      </div>
+  </div>
+
+  
     <div class="div-block-86"></div>
     <div class="w-layout-blockcontainer container-20 w-container">
       <div data-w-id="0857bd6b-243b-1177-4f42-b13b7ed3b5fb" class="prop-alllistings prop-all-listings"><a href="/listings.html" class="link-block-2 w-inline-block">
