more contact page changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -76,9 +76,9 @@
       </div>
   </div>
 
-  
+
     <div class="div-block-89"></div>
-    <section class="rt-component-section-3 rt-contact-v-one">
+    <section class="rt-component-section-3 rt-contact-v-one contact-section">
       <div class="w-layout-blockcontainer rt-component-container-3 w-container">
         <div class="w-layout-hflex rt-contact-one-block-two">
           <div class="rt-contact-block-two-left">
