--- a/contact-us.html
+++ b/contact-us.html
@@ -78,7 +78,7 @@
 
 
     <div class="div-block-89"></div>
-    <section class="rt-component-section-3 rt-contact-v-one contact-section">
+    <section class="rt-component-section-3 rt-contact-v-one contact-section" style="z-index: 3; background-color: transparent;">
       <div class="w-layout-blockcontainer rt-component-container-3 w-container">
         <div class="w-layout-hflex rt-contact-one-block-two">
           <div class="rt-contact-block-two-left">
