added for lease page

--- a/buying.html
+++ b/buying.html
@@ -232,7 +232,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
         console.log("Buying Form Data:", formData); // Debug: Check what’s being sent
 
-        emailjs.send('service_baxor2i', 'template_rtal6kj', formData)
+        emailjs.send('service_baxor2i', 'template_3c5ghck', formData)
             .then(() => {
                 successMsg.style.display = 'block';
                 errorMsg.style.display = 'none';
