--- a/listing-1212.html
+++ b/listing-1212.html
@@ -521,7 +521,7 @@
     
                 console.log('Form data:', data);
     
-                emailjs.send('service_baxor2i', 'template_rtal6kj', {
+                emailjs.send('service_baxor2i', 'template_3c5ghck', {
                     from_name: data.name,
                     from_email: data.email,
                     phone: data.phone,
