--- a/properties.html
+++ b/properties.html
@@ -82,7 +82,7 @@
       <div data-w-id="0857bd6b-243b-1177-4f42-b13b7ed3b5fb" class="prop-alllistings prop-all-listings"><a href="/listings.html" class="link-block-2 w-inline-block">
           <h1 class="heading-74">ALL LISTINGS</h1>
         </a></div>
-      <div data-w-id="9fb9c8c3-cc04-ff3c-56a2-c7dd7039df27" class="prop-alllistings prop-forlease"><a href="#" class="link-block-3 w-inline-block">
+      <div data-w-id="9fb9c8c3-cc04-ff3c-56a2-c7dd7039df27" class="prop-alllistings prop-forlease"><a href="/for-lease.html" class="link-block-3 w-inline-block">
           <h1 class="heading-74">FOR LEASE</h1>
         </a></div>
       <div data-w-id="0ba5167d-7193-1c49-b22c-a23f424d1005" class="prop-alllistings prop-precon"><a href="#" class="link-block-4 w-inline-block">
