--- a/listing-1.html
+++ b/listing-1.html
@@ -2,7 +2,7 @@
 <html data-wf-page="67be6469de122ba6ca673237" data-wf-site="6642c0e4ea9730ea7938fcb1">
   <head>
     <meta charset="utf-8" />
-    <title>A-2/270 - Listing #34432</title>
+    <title>2323 - Listing #1</title>
     <meta content="listing" property="og:title" />
     <meta content="listing" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -32,7 +32,7 @@
     document.addEventListener('DOMContentLoaded', function() {
     emailjs.init('EESFEko27dm9qY7u2'); // Replace with your EmailJS public key
 
-    const address = 'A-2/270'; // Pulled from update_pages.py
+    const address = '2323'; // Pulled from update_pages.py
 
     // Modal toggle functions
     function openModal(modalId) {
@@ -89,7 +89,7 @@
             from_email: data.email,
             phone: data.phone,
             message: data.message,
-            subject: `Details Request for $A-2/270`
+            subject: `Details Request for $2323`
         }).then(() => {
             this.reset();
             this.querySelector('.modal-success').style.display = 'block';
@@ -122,7 +122,7 @@
             phone: data.phone,
             preferred_time: data.preferredTime,
             preferred_date: data.preferredDate,
-            subject: `Showing Request for $A-2/270`
+            subject: `Showing Request for $2323`
         }).then(() => {
             this.reset();
             this.querySelector('.modal-success').style.display = 'block';
@@ -295,47 +295,47 @@
 
     <div class="div-block-48">
         <h1 class="heading-26">✦</h1>
-        <h1 class="heading-25 listmainheader"><strong class="bold-text-2 listingtoptitleaddress">A-2/270</strong></h1>
+        <h1 class="heading-25 listmainheader"><strong class="bold-text-2 listingtoptitleaddress">2323</strong></h1>
     </div>
     <div class="div-block-79">
         <div class="photo-showcase">
-            <img src="listings/34432/thumbnail.jpg" class="main-image" id="mainImage" alt="Main Property Image">
+            <img src="listings/1/thumbnail.jpg" class="main-image" id="mainImage" alt="Main Property Image">
             <div class="thumbnail-container" id="thumbnailContainer">
                 <!-- Thumbnails will be inserted here -->
             </div>
         </div>
     </div>
     <div class="w-layout-blockcontainer container-19 w-container">
-        <h1 class="heading-40 listhouseadrs" style="margin-right: 15px;"><strong class="bold-text-3">A-2/270</strong></h1>
-        <h1 class="heading-41 listcityprovpin">NEW DELHI, ON 110063</h1>
-        <h1 class="heading-40 listprice" style="margin-left: 10px;">$3,434</h1>
-        <h1 class="heading-42 listlistingno">LISTING #34432</h1>
+        <h1 class="heading-40 listhouseadrs" style="margin-right: 15px;"><strong class="bold-text-3">2323</strong></h1>
+        <h1 class="heading-41 listcityprovpin">DFS, ON 343</h1>
+        <h1 class="heading-40 listprice" style="margin-left: 10px;">$324,345,345</h1>
+        <h1 class="heading-42 listlistingno">LISTING #1</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
-            <h1 class="heading-44 listbeds">23</h1>
+            <h1 class="heading-44 listbeds">12</h1>
             <h1 class="heading-45">BATHS</h1>
-            <h1 class="heading-46 listbaths">23</h1>
+            <h1 class="heading-46 listbaths">2</h1>
             <h1 class="heading-47">GARAGE</h1>
-            <h1 class="heading-48 listgarage">23</h1>
+            <h1 class="heading-48 listgarage">1</h1>
             <h1 class="heading-49">SQFT</h1>
-            <h1 class="heading-50 listsqft">2323</h1>
+            <h1 class="heading-50 listsqft">1212</h1>
         </div>
         <a href="#" class="button-3 hb2button listingreqdetbtn w-button">REQUEST DETAILS</a>
         <a href="#" class="button-3 hb2button listingschedviewbtn w-button">SCHEDULE A SHOWING</a>
         <div class="divider-main"></div>
         <h1 class="heading-51">ABOUT THIS PROPERTY</h1>
-        <p class="paragraph-14 listaboutprop">sdfsdf</p>
+        <p class="paragraph-14 listaboutprop">sdasdasd</p>
         <div class="divider-main"></div>
         <h1 class="heading-51">PROPERTY DETAILS</h1>
         <div class="div-block-81">
             <h1 class="heading-52">Community</h1>
-            <h1 class="heading-52 listpropcomm">sdfsdf</h1>
+            <h1 class="heading-52 listpropcomm">asdasd</h1>
             <h1 class="heading-52">Area</h1>
-            <h1 class="heading-52 listarea">sdfsdf</h1>
+            <h1 class="heading-52 listarea">sadas</h1>
             <h1 class="heading-52">Cross Street</h1>
-            <h1 class="heading-52 listcrossstreet">sdfsdf</h1>
+            <h1 class="heading-52 listcrossstreet">sadasd</h1>
             <h1 class="heading-52">City Area</h1>
-            <h1 class="heading-52 listcityarea">sdfsd</h1>
+            <h1 class="heading-52 listcityarea">asdasd</h1>
         </div>
     </div>
     <div class="divider-main"></div>
@@ -346,7 +346,7 @@
           <div class="rt-contact-two-form-main">
               <div class="rt-contact-two-form-title">
                   <h2 class="heading-53">INTERESTED IN</h2>
-                  <h1 class="heading-54"><strong class="bold-text">A-2/270, NEW DELHI, ON 110063</strong></h1>
+                  <h1 class="heading-54"><strong class="bold-text">2323, DFS, ON 343</strong></h1>
               </div>
               <div class="rt-contact-two-form-wrapper-3">
                   <div class="w-form">
@@ -500,7 +500,7 @@
                     phone: form.phone.value.trim(),
                     message: form.message.value.trim()
                 };
-                const address = 'A-2/270, NEW DELHI, ON 110063';
+                const address = '2323, DFS, ON 343';
     
                 // Custom validation
                 if (!data.name || !data.email || !data.phone) {
@@ -526,7 +526,7 @@
                     from_email: data.email,
                     phone: data.phone,
                     message: data.message,
-                    subject: `Inquiry for $A-2/270`
+                    subject: `Inquiry for $2323`
                 })
                 .then((response) => {
                     console.log('Email sent:', response);
@@ -547,7 +547,7 @@
     </script>
 
     <script>
-      const photos = ["listings/34432/thumbnail.jpg", ...["listings/34432/360_F_93963870_VnTvQJwqzcI1VuGfS1M9CNl5osnrCuGX.jpg", "listings/34432/12740.jpg"]]; // Include main thumbnail in the array
+      const photos = ["listings/1/thumbnail.jpg", ...["listings/1/bed.png"]]; // Include main thumbnail in the array
       const mainImage = document.getElementById('mainImage');
       const thumbnailContainer = document.getElementById('thumbnailContainer');
       let currentIndex = 0;
