--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="uui-text-size-xlarge animate-on-scroll">Be the first to secure your dream home or next investment at pre-launch prices. With flexible payment plans, customizable finishes, and promising returns, pre-construction developments offer a unique opportunity to shape your future while building long-term value.</div>
                 <div class="uui-space-large"></div>
                 <div class="uui-button-row is-reverse-mobile-landscape z-index-1">
-                  <a href="#" class="button-3 hb2button preconbutton w-button animate-on-scroll">FIND PRECONSTRUCTION PROPERTIES</a>
+                  <a href="/pre-construction.html" class="button-3 hb2button preconbutton w-button animate-on-scroll">FIND PRECONSTRUCTION PROPERTIES</a>
                 </div>
               </div>
               <div class="uui-heroheader24_image-wrapper">
