--- a/properties.html
+++ b/properties.html
@@ -85,7 +85,7 @@
       <div data-w-id="9fb9c8c3-cc04-ff3c-56a2-c7dd7039df27" class="prop-alllistings prop-forlease"><a href="/for-lease.html" class="link-block-3 w-inline-block">
           <h1 class="heading-74">FOR LEASE</h1>
         </a></div>
-      <div data-w-id="0ba5167d-7193-1c49-b22c-a23f424d1005" class="prop-alllistings prop-precon"><a href="#" class="link-block-4 w-inline-block">
+      <div data-w-id="0ba5167d-7193-1c49-b22c-a23f424d1005" class="prop-alllistings prop-precon"><a href="/pre-construction.html" class="link-block-4 w-inline-block">
           <h1 class="heading-74">pre-construction</h1>
         </a></div>
     </div>
