--- a/listings_template.html
+++ b/listings_template.html
@@ -91,8 +91,8 @@
             <h1 class="heading-57"><a href="buying.html" class="link-14">BUYING A HOME</a></h1>
             <h1 class="heading-58"><a href="properties.html" class="link-15">PROPERTIES</a></h1>
             <h1 class="heading-59"><a href="listings.html" class="link-16">ALL LISTINGS</a></h1>
-            <h1 class="heading-60"><a href="#" class="link-17">FOR LEASE</a></h1>
-            <h1 class="heading-61"><a href="#" class="link-18">PRE-CONSTRUCTION</a></h1>
+            <h1 class="heading-60"><a href="for-lease.html" class="link-17">FOR LEASE</a></h1>
+            <h1 class="heading-61"><a href="pre-construction.html" class="link-18">PRE-CONSTRUCTION</a></h1>
             <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
             <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
             <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
