added for lease and for sale to respective pages

--- a/listings.html
+++ b/listings.html
@@ -101,7 +101,7 @@
     </div>
   </div>
 
-  <h1 class="heading-78">ALL LISTINGS</h1>
+  <h1 class="heading-78">FOR SALE</h1>
   <div class="div-block-66">
     <div class="div-block-67">
       <div class="refineblock">
