fixed index horizontal scroll issue

--- a/index.html
+++ b/index.html
@@ -571,6 +571,10 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
+  <script src="/js/fix-mobile-scroll.js" type="text/javascript"></script>
+
+
+
   <script src="/js/jquery.js" type="text/javascript"  ></script>
   <script src="/js/webflow.schunk.6c94673727302d98.js" type="text/javascript"></script>
   <script src="/js/webflow.schunk.9619e854913b3e55.js" type="text/javascript"></script>
