--- a/about.html
+++ b/about.html
@@ -126,16 +126,26 @@
                   </div>
                 </div>
               </div>
-              <div class="uui-contact03_form-wrapper w-form">
-                <form id="wf-form-Contact-03-form" name="wf-form-Contact-03-form" data-name="Contact 03 form" method="get" class="uui-contact03_form" data-wf-page-id="66e62d055a9e5e3d49200459" data-wf-element-id="ee171ada-3cc9-1418-45f8-f3d040c37bb2">
-                  <div class="uui-form-field-wrapper"><label for="Contact03-name" class="uui-field-label">Name</label><input class="uui-form_input w-input" maxlength="256" name="Contact-03-name" data-name="Contact 03 name" placeholder="Your name" type="text" id="Contact03-name" required="" /></div>
-                  <div class="uui-form-field-wrapper"><label for="Contact03-email" class="uui-field-label">Email</label><input class="uui-form_input w-input" maxlength="256" name="Contact-03-email" data-name="Contact 03 email" placeholder="your@company.com" type="email" id="Contact03-email" required="" /></div>
-                  <div class="uui-form-field-wrapper"><label for="Contact03-message" class="uui-field-label">Message</label><textarea id="Contact03-message" name="Contact-03-message" maxlength="5000" data-name="Contact 03 message" placeholder="Type your message..." required="" class="uui-form_input text-area w-input"></textarea></div><a data-w-id="37f53895-95c7-0d82-b23d-b4a9b83a486a" href="#" class="button-3 hb2button aboutcontactsubmitbtn w-button">FIND YOUR DREAM HOME</a>
+              <div class="uui-contact03_form-wrapper">
+                <form id="about-contact-form" name="about-contact-form" class="uui-contact03_form">
+                  <div class="uui-form-field-wrapper">
+                    <label for="name" class="uui-field-label">Name</label>
+                    <input class="uui-form_input w-input" maxlength="256" name="name" placeholder="Your name" type="text" id="name" required="" />
+                  </div>
+                  <div class="uui-form-field-wrapper">
+                    <label for="email" class="uui-field-label">Email</label>
+                    <input class="uui-form_input w-input" maxlength="256" name="email" placeholder="your@company.com" type="email" id="email" required="" />
+                  </div>
+                  <div class="uui-form-field-wrapper">
+                    <label for="message" class="uui-field-label">Message</label>
+                    <textarea id="message" name="message" maxlength="5000" placeholder="Type your message..." required="" class="uui-form_input text-area w-input"></textarea>
+                  </div>
+                  <input type="submit" value="FIND YOUR DREAM HOME" class="button-3 hb2button aboutcontactsubmitbtn w-button" id="submit-btn" />
                 </form>
-                <div class="success-message w-form-done">
+                <div id="form-success" style="display: none;">
                   <div class="success-text">Thank you! Your submission has been received!</div>
                 </div>
-                <div class="error-message w-form-fail">
+                <div id="form-error" style="display: none;">
                   <div class="error-text">Oops! Something went wrong while submitting the form.</div>
                 </div>
               </div>
@@ -170,6 +180,64 @@
         </div>
       </div>
     </footer>
+
+    <!-- Add EmailJS script if not already in the page -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    <!-- Form submission script -->
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      emailjs.init('EESFEko27dm9qY7u2'); // Your EmailJS public key
+
+      const form = document.getElementById('about-contact-form');
+      const submitBtn = document.getElementById('submit-btn');
+      const successMsg = document.getElementById('form-success');
+      const errorMsg = document.getElementById('form-error');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        submitBtn.value = 'Please wait...';
+
+        const formData = {
+          subject: "About Page Contact Form Submission",
+          from_name: document.getElementById('name').value || "",
+          from_email: document.getElementById('email').value || "",
+          phone: "", // Not present in this form
+          message: document.getElementById('message').value || "",
+          preferred_time: "",
+          preferred_date: "",
+          address: "",
+          property_type: "",
+          bedrooms: "",
+          bathrooms: "",
+          square_footage: "",
+          budget: "",
+          city: "",
+          completion_date: ""
+        };
+
+        console.log("About Contact Form Data:", formData); // Debug: Check what’s being sent
+
+        emailjs.send('service_baxor2i', 'template_new_buy_pre', formData)
+          .then(() => {
+            successMsg.style.display = 'block';
+            errorMsg.style.display = 'none';
+            form.reset();
+            submitBtn.value = 'FIND YOUR DREAM HOME';
+            setTimeout(() => successMsg.style.display = 'none', 5000);
+          })
+          .catch((error) => {
+            console.error('EmailJS Error:', error);
+            successMsg.style.display = 'none';
+            errorMsg.style.display = 'block';
+            submitBtn.value = 'FIND YOUR DREAM HOME';
+            setTimeout(() => errorMsg.style.display = 'none', 5000);
+          });
+      });
+    });
+    </script>
+
+
     <script src="/js/jquery.js" type="text/javascript"  ></script>
     <script src="/js/webflow.schunk.6c94673727302d98.js" type="text/javascript"></script>
     <script src="/js/webflow.schunk.9619e854913b3e55.js" type="text/javascript"></script>
