--- a/homeevaluation.html
+++ b/homeevaluation.html
@@ -7,6 +7,7 @@
     <meta content="HomeEvaluation" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="/css/webflow-style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/footer.css" rel="stylesheet" type="text/css" />  
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -102,32 +103,43 @@
         <div class="div-block-51"></div>
       </div>
     </div>
+
     <footer class="uui-footer07_component">
       <div class="uui-page-padding-2">
         <div class="uui-container-large-2">
           <div class="uui-padding-vertical-xlarge">
-            <div class="uui-footer07_top-wrapper"><a href="#" id="w-node-_713c3ffb-bb9e-1cc4-db40-828bb3c4682e-b3c46829" class="uui-footer07_logo-link w-nav-brand">
-                <div class="uui-logo_component"><img src="/images/logo4.png" loading="lazy" data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46830" alt="Untitled UI logotext" class="uui-logo_logotype" /><img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" /></div>
+            <div class="uui-footer07_top-wrapper">
+              <a href="#" class="uui-footer07_logo-link w-nav-brand">
+                <div class="uui-logo_component">
+                  <img src="/images/logo4.png" loading="lazy" alt="RealtorMKS Logo" class="uui-logo_logotype" />
+                  <img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" />
+                </div>
               </a>
-              <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46832" class="w-layout-grid uui-footer07_link-list"><a href="/homeevaluation.html" aria-current="page" class="uui-footer07_link w-inline-block w--current">
+              <div class="w-layout-grid uui-footer07_link-list">
+                <a href="/homeevaluation.html" class="uui-footer07_link w-inline-block">
                   <div class="text-block-23">HOME EVALUATION</div>
-                </a><a href="/buying.html" class="uui-footer07_link w-inline-block">
+                </a>
+                <a href="/buying.html" class="uui-footer07_link w-inline-block">
                   <div class="text-block-24">BUYING</div>
-                </a><a href="/properties.html" class="uui-footer07_link w-inline-block">
+                </a>
+                <a href="/properties.html" class="uui-footer07_link w-inline-block">
                   <div class="text-block-25">PROPERTIES</div>
-                </a><a href="/about.html" class="uui-footer07_link w-inline-block">
+                </a>
+                <a href="/about.html" class="uui-footer07_link w-inline-block">
                   <div class="text-block-27">ABOUT</div>
-                </a><a href="/contact-us.html" class="uui-footer07_link w-inline-block">
+                </a>
+                <a href="/contact-us.html" class="uui-footer07_link w-inline-block">
                   <div class="text-block-28">CONTACT</div>
-                </a></div>
+                </a>
+              </div>
             </div>
-            <div data-w-id="713c3ffb-bb9e-1cc4-db40-828bb3c46842" class="uui-footer07_bottom-wrapper">
+            <div class="uui-footer07_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">© 2025 RealtorMKS. All rights reserved.</div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+
     <script src="/js/jquery.js" type="text/javascript"  ></script>
     <script src="/js/webflow.schunk.6c94673727302d98.js" type="text/javascript"></script>
     <script src="/js/webflow.schunk.9619e854913b3e55.js" type="text/javascript"></script>
